<resources>
    <string name="app_name">Counter</string>
    <string name="button_inc">Increment Counter</string>
    <string name="button_dec">Decrement Counter</string>
    <string name="button_rst">Reset Counter</string>
    <string name="button_settings">Settings</string>

    <string name="settings">Settings</string>

    <string name="settings_always_on">Always On</string>
    <string name="settings_always_on_description">Control the counter using physical buttons in ambient mode. Restart app to apply changes.</string>

    <string name="settings_animation">Animation</string>
    <string name="settings_animation_off">Off</string>
    <string name="settings_animation_fade">Fade</string>
    <string name="settings_animation_slide">Slide</string>

    <string name="settings_buttons">Buttons</string>
    <string name="settings_button_1">Button 1</string>
    <string name="settings_button_2">Button 2</string>
    <string name="settings_button_3">Button 3</string>
    <string name="settings_button_increment">Increment</string>
    <string name="settings_button_decrement">Decrement</string>
    <string name="settings_button_reset">Reset</string>

    <string name="settings_counter_cycle">Counter Cycle</string>
    <string name="settings_counter_cycle_enabled">Enabled</string>
    <string name="settings_counter_cycle_length">Length</string>
    <string name="settings_counter_cycle_vibrate">Vibrate</string>
    <string name="settings_counter_cycle_sound">Sound</string>

    <string name="settings_text_size">Text Size</string>
    <string name="settings_text_size_small">Small</string>
    <string name="settings_text_size_medium">Medium</string>
    <string name="settings_text_size_large">Large</string>
</resources>