<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <import type="android.view.View" />
        <import type="androidx.databinding.ObservableBoolean" />
        <import type="androidx.databinding.ObservableInt" />
        <variable name="isAmbientMode" type="ObservableBoolean" />
        <variable name="isAnimationEnabled" type="ObservableBoolean" />
        <variable name="isCycleEnabled" type="ObservableBoolean" />
        <variable name="counter" type="ObservableInt" />
        <variable name="cycle" type="ObservableInt" />
        <variable name="textSize" type="ObservableInt" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CounterActivity"
        tools:deviceIds="wear">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">
            <TextView
                android:visibility="@{isCycleEnabled ? View.VISIBLE : View.GONE}"
                android:textStyle="normal"
                android:textColor="?android:textColorSecondary"
                android:textSize="@{textSize}"
                android:text="@{String.valueOf(cycle)}"
                tools:text="cycle"
                style="@style/CounterText"/>
            <TextView
                android:textStyle="bold"
                android:textColor="?android:textColorPrimary"
                android:textSize="@{textSize}"
                android:text="@{String.valueOf(counter)}"
                tools:text="counter"
                style="@style/CounterText"/>
        </LinearLayout>
        <ImageButton
            android:layout_width="@dimen/button_size"
            android:layout_height="match_parent"
            android:visibility="@{isAmbientMode ? View.GONE : View.VISIBLE}"
            android:background="?android:selectableItemBackground"
            android:src="@drawable/decrement"
            android:onClick="onClickDec"
            android:contentDescription="@string/button_dec"
            app:layout_constraintStart_toStartOf="parent" />
        <ImageButton
            android:layout_width="@dimen/button_size"
            android:layout_height="match_parent"
            android:visibility="@{isAmbientMode ? View.GONE : View.VISIBLE}"
            android:background="?android:selectableItemBackground"
            android:src="@drawable/increment"
            android:onClick="onClickInc"
            android:contentDescription="@string/button_inc"
            app:layout_constraintEnd_toEndOf="parent" />
        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_size"
            android:visibility="@{isAmbientMode ? View.GONE : View.VISIBLE}"
            android:background="?android:selectableItemBackground"
            android:src="@drawable/settings"
            android:onClick="openSettings"
            android:contentDescription="@string/button_settings"
            app:layout_constraintTop_toTopOf="parent" />
        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_size"
            android:visibility="@{isAmbientMode ? View.GONE : View.VISIBLE}"
            android:fitsSystemWindows="true"
            android:background="?android:selectableItemBackground"
            android:src="@drawable/reset"
            android:onClick="onClickRst"
            android:contentDescription="@string/button_rst"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>